--- a/decidim-meetings/app/views/decidim/meetings/shared/_index.js.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_index.js.erb
@@ -1,9 +1,11 @@
 var $meetings = $('#meetings');
+var $meeting_frame = $('#meeting_frame');
 
 var $urlCalendarUrl = $('#urlCalendarUrl');
 $urlCalendarUrl.val("<%= short_url(route_name: "calendar", params: { filter: params.fetch(:filter, {}).try(:to_unsafe_hash) }) %>");
 
 $meetings.html('<%= j(render partial: "decidim/meetings/shared/meetings").strip.html_safe %>');
+$meeting_frame.data("filteredPath", "<%= request.fullpath %>");
 
 var markerData = JSON.parse('<%= escape_javascript meetings_data_for_map(search.result).to_json.html_safe %>');
 
