--- a/decidim-debates/app/cells/decidim/debates/debate_card_metadata/show.erb
+++ b/decidim-debates/app/cells/decidim/debates/debate_card_metadata/show.erb
@@ -3,7 +3,9 @@
     <%= icon "calendar-line" %>
     10 oct - 20 oct
   </span>
-  <span></span>
+  <span>
+    <%= cell "decidim/endorsers_list", debate %>
+  </span>
   <span>
     <%= icon "wechat-line" %>
     23
