--- a/decidim-accountability/app/views/decidim/accountability/results/index.html.erb
+++ b/decidim-accountability/app/views/decidim/accountability/results/index.html.erb
@@ -23,6 +23,7 @@
       <%= decidim_paginate results, order_start_time: params[:order_start_time], with_scope: params.dig(:filter, :with_scope) %>
     </div>
   <% end %>
+  <%= turbo_stream_action_tag :refresh_filter, filtered_path: request.fullpath, turbo_frame: "project_frame" %>
 <% end %>
 
 <%= turbo_frame_tag "project_frame", data: { filtered_path: request.fullpath } %>
