--- a/decidim-comments/app/views/decidim/comments/comments/delete.js.erb
+++ b/decidim-comments/app/views/decidim/comments/comments/delete.js.erb
@@ -12,6 +12,9 @@ $(() => {
   });
   $commentReply.remove();
   $content.replaceWith(deleteDataHtml);
+  Rails.fire(document, "ajax:success", {
+    commentsIds: [commentId]
+  });
 
   $(".comments-count", $(`#${rootCommentableId}`)).text(<%== t("decidim.components.comments.title", count: @comment.root_commentable.comments_count).to_json %>);
 });
