--- a/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
+++ b/decidim-assemblies/app/views/decidim/assemblies/assemblies/show.html.erb
@@ -55,6 +55,12 @@ edit_link(
       <div class="content-block__title">
         <h2 class="h2 decorator"><%= t("children", scope: "decidim.assemblies.show") %></h2>
         <div class="label text-lg"><%= children.length %></div>
+
+        <%#= REDESIGN_PENDING: add link to index %>
+        <%= link_to "#", class: "button button__sm button__text-secondary" do %>
+          <span><%= t("decidim.assemblies.pages.home.highlighted_assemblies.see_all_assemblies") %></span>
+          <%= icon "arrow-right-line" %>
+        <% end %>
       </div>
 
       <div class="assembly__block-grid">
