--- a/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/all_metrics.html.erb
+++ b/decidim-participatory_processes/app/views/decidim/participatory_processes/participatory_processes/all_metrics.html.erb
@@ -12,7 +12,7 @@
   <div class="mb-24">
     <div id="metrics" class="metric__container">
       <%= metrics.params %>
-      <%= metrics.redesigned_charts %>
+      <%= metrics.redesigned_charts Decidim.metrics_registry.filtered(scope: "participatory_process", sort: true) %>
     </div>
 
     <%= link_to participatory_process_path(current_participatory_space), class: "button button__sm button__text-secondary mt-10" do %>
