--- a/decidim-core/app/cells/decidim/content_blocks/static_page/two_pane_section/show.erb
+++ b/decidim-core/app/cells/decidim/content_blocks/static_page/two_pane_section/show.erb
@@ -1,4 +1,8 @@
 <div class="grid md:grid-cols-2 grid-cols-1 gap-2">
-  <%= left_column %>
-  <%= right_column %>
+  <div>
+    <%= left_column %>
+  </div>
+  <div>
+    <%= right_column %>
+  </div>
 </div>
