--- a/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/redesigned_application.scss
@@ -52,6 +52,7 @@
   @import "stylesheets/decidim/redesigned_cards.scss";
   @import "stylesheets/decidim/redesigned_metrics.scss";
   @import "stylesheets/decidim/redesigned_endorsers_list.scss";
+  @import "stylesheets/decidim/redesigned_activity.scss";
 }
 
 // On the other hand, the following styles match with specific routes
