Allow calling diff cell without a path

--- a/decidim-core/app/cells/decidim/diff/show.erb
+++ b/decidim-core/app/cells/decidim/diff/show.erb
@@ -1,10 +1,12 @@
-<%= form_tag(path({}), method: :get, data: { turbo_frame: "version_diff_frame" }) do %>
-  <div class="version__selector-container">
-    <%= render :diff_mode_dropdown %>
-    <%= render :diff_mode_html %>
+<% if path({}).present? %>
+  <%= form_tag(path({}), method: :get, data: { turbo_frame: "version_diff_frame" }) do %>
+    <div class="version__selector-container">
+      <%= render :diff_mode_dropdown %>
+      <%= render :diff_mode_html %>
 
-    <%= submit_tag nil, hidden: true %>
-  </div>
+      <%= submit_tag nil, hidden: true %>
+    </div>
+  <% end %>
 <% end %>
 
 <div class="version__diff-container" aria-live="polite">
