--- a/decidim-comments/app/views/decidim/comments/comments/create.js.erb
+++ b/decidim-comments/app/views/decidim/comments/comments/create.js.erb
@@ -11,6 +11,10 @@
     component.addThread(commentHtml, true);
   }
 
+  Rails.fire(document, "ajax:success", {
+    commentsIds: [<%= @comment.id %>, <%= @comment.commentable.id %>]
+  });
+
   // Update the comments count
   $(".comments-count", $comments).text(<%== t("decidim.components.comments.title", count: @comments_count).to_json %>);
 }());
