add span style as component part

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_content_blocks.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_content_blocks.scss
@@ -9,6 +9,10 @@
     @apply text-lg prose max-w-2xl;
   }
 
+  &__span{
+    @apply text-gray-2 font-semibold uppercase;
+  }
+
   & ~ &{
     @apply border-t-2 border-background;
   }
