--- a/decidim-core/app/views/decidim/newsletter_mailer/newsletter.html.erb
+++ b/decidim-core/app/views/decidim/newsletter_mailer/newsletter.html.erb
@@ -1,7 +1,11 @@
 <%= decidim_sanitize_newsletter cell.to_s %>
 
 <% content_for :note do %>
-  <%== t ".note", organization_name: h(@organization.name), link: decidim.notifications_settings_url(host: @organization.host) %>
+  <% if @newsletter.try(:draft?) %>
+    <%== t ".note", organization_name: h(@organization.name), link: "#" %>
+  <% else %>
+    <%== t ".note", organization_name: h(@organization.name), link: decidim.notifications_settings_url(host: @organization.host) %>
+  <% end %>
 <% end %>
 
 <% content_for :unsubscribe do %>
