--- a/decidim-proposals/app/cells/decidim/proposals/highlighted_proposals_for_component/show.erb
+++ b/decidim-proposals/app/cells/decidim/proposals/highlighted_proposals_for_component/show.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="flex items-start justify-between">
-    <div class="grow">
+    <div class="grow space-y-6">
       <span class="content-block__span">
         <%= t("decidim.participatory_spaces.highlighted_proposals.last") %>
       </span>
