--- a/decidim-core/app/views/layouts/decidim/header/_redesigned_menu.html.erb
+++ b/decidim-core/app/views/layouts/decidim/header/_redesigned_menu.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-primary relative">
+<div id="menu-bar" class="bg-primary relative">
   <div class="container flex justify-between items-center py-4 lg:relative">
 
     <%# secondary dropdown only desktop %>
