--- a/decidim-core/app/cells/decidim/card_m/header.erb
+++ b/decidim-core/app/cells/decidim/card_m/header.erb
@@ -12,5 +12,5 @@
       </div>
     </div>
   <% end %>
-  <%= render_authorship if has_authors? %>
+  <%= cell "decidim/author", presented_resource.author, from: resource, has_actions: true, skip_profile_link: true %>
 </div>
