--- a/decidim-debates/app/cells/decidim/debates/debate_card_metadata/show.erb
+++ b/decidim-debates/app/cells/decidim/debates/debate_card_metadata/show.erb
@@ -1,10 +1,19 @@
 <div class="card__list-metadata">
   <span>
     <%= icon "calendar-line" %>
-    10 oct - 20 oct
+    20 oct - 22 oct
   </span>
   <span>
-    <%= cell "decidim/endorsers_list", debate %>
+    <%= icon "price-tag-3-line" %>
+    Ipsam reprehenderit vero voluptatum illum.
+  </span>
+  <span>
+    <%= icon "time-line" %>
+    10 oct
+  </span>
+  <span>
+    <%= icon "heart-add-line" %>
+    11
   </span>
   <span>
     <%= icon "wechat-line" %>
